# SynPair

./: .gitignore  LICENSE  README.md  pairing_pipeline.sh  pyproject.toml
src/synpair/: build_index.py  constants.py  embed.py  model.py  pair.py  predict.py  train.py
